# bestbuy

./: README.md
bestbuy/: Cargo.toml
bestbuy/src/: client.rs  lib.rs  result.rs  types.rs
bestbuy/src/offer/: mod.rs  types.rs
bestbuy/src/order/: mod.rs  types.rs
bestbuy_cli/: Cargo.toml
bestbuy_cli/src/: helpers.rs  main.rs
